# athena

./: .gitignore  Makefile  README.md  athena.1  bit.c  bit.h  clang.ini  config.mk  eval.c  eval.h  main.c  meson.build  move.c  move.h  movegen.c  movegen.h  msvc.ini  pos.c  pos.h  rng.c  rng.h  search.c  search.h  str.c  str.h  threads.c  threads.h  tt.c  tt.h  uci.c  uci.h  unix.ini
src/: bit.c  bit.h  eval.c  eval.h  main.c  move.c  move.h  movegen.c  movegen.h  pos.c  pos.h  rng.c  search.c  search.h  str.c  str.h  test_movegen.c  test_movegen.h  threads.c  threads.h  tt.c  tt.h  uci.c
